Implemented end point for create and get notifications
