# webapp/api/route.go
@@ -1,0 +1,8 @@
+package api
+import "github.com/gin-gonic/gin"
+
+//RegisterRoutes register api routes
+func RegisterRoutes(router *gin.RouterGroup) {
+	router.GET("/notifications", getNotifications)
+	router.POST("/notifications", createNotifications)
+}
